# federated_learning

./: .gitignore  LICENSE  README.md  baseline.py  pyproject.toml
fed/: __init__.py  adaptive_federated_optimization.py  baseline.py  client_app.py  partitioning.py  server_app.py  task.py
fed/logger/: __init__.py  factory.py  file_logger.py  logger.py  wandb_logger.py
fed/partitioning/: complete_pathological_partitioner.py  partitioning.py  visualize_partitions.py
fed/strategies/: __init__.py  adaptive_federated_optimization.py  custom_strat_test.py  weighted_federated_average.py
fed/task/: __init__.py  load_data.py  network.py  test.py  train.py
partitioning/: partitioning.py  visualize_partitions.py
report/: biblio.bib  report.tex
