[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fed"
version = "1.0.0"
description = "Federated Learning with Flower and PyTorch"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "numpy>=1.24.0",
    "wandb==0.19.11",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "David"

[tool.flwr.app.components]
serverapp = "fed.server_app:app"
clientapp = "fed.client_app:app"

[tool.flwr.app.config]
# Server configuration
run-name = "fedavg-weighted-iid"
num-server-rounds = 10
fraction-fit = 1.0

server_learning-rate = 0.01
seed = -1 # -1 for random seed

# Client configuration
local-epochs = 10
early-stopping = true
batch-size = 256
client-learning-rate = 0.001
client-optimizer = "adam"

logger-type="wandb" # "file" or "wandb"
strategy-name = "fedavg-weighted"
partitioning-strategy = "iid" # Available strategies: "iid", "dirichlet", "pathological", "shard", "size", "linear", "square", "exponential"
dataset = "uoft-cs/cifar10"

# Optional partitioning parameters (uncomment as needed)
# For Dirichlet partitioning
#dirichlet-alpha = 0.5
# For Pathological partitioning
# num_classes-per-partition = 2

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.3