[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fed"
version = "1.0.0"
description = "Federated Learning with Flower and PyTorch"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "numpy>=1.24.0",
    "wandb==0.19.11",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "David"

[tool.flwr.app.components]
serverapp = "fed.server_app:app"
clientapp = "fed.client_app:app"

[tool.flwr.app.config]
# General configuration
dataset = "uoft-cs/cifar10"
partitioning-strategy = "iid" # Available strategies: "iid", "dirichlet", "pathological", "shard", "size", "linear", "square", "exponential"
seed = 35 # -1 for random seed

run-name = "fedavg-weighted-iid"
logger-type="wandb" # "file" or "wandb"

strategy-name = "fedavg-weighted"
strat_optimizer = "adagrad" # "yogi" or "adam" or "adagrad"

# Ex of Optional partitioning parameters (uncomment as needed)
# For Dirichlet partitioning
# dirichlet-alpha = 0.5
# For Pathological partitioning
# num_classes-per-partition = 2

# Server configuration
num-server-rounds = 10
fraction-fit = 1.0
server_learning-rate = 0.01

# Client configuration
local-epochs = 10
early-stopping = true
batch-size = 256
client-learning-rate = 0.001
client-optimizer = "adam" # "adam" or "sgd"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.3